--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "homepage": "https://<your-username>.github.io/<your-repository-name>",
+  "homepage": "https://thasneem9.github.io/3d-card",
+
   "name": "3d-card",
   "version": "0.1.0",
   "private": true,
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,7 +42,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.12",
     "framer-motion": "^7.6.1",
-    "gh-pages": "^6.2.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   }
