--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://thasneem9.github.io/3d-card",
+  "homepage": "https://thasneem9.github.io/3d-card/",
 
   "name": "3d-card",
   "version": "0.1.0",
